# testMemoire

./: CMakeLists.txt  MemoryBlock.h  Process.h  Processor.h  main.cpp  mainFCFS.cpp  mainRR.cpp  mainSJF.cpp  mainSRTF.cpp  test.cpp  usualFunction.h
